--- a/src/Periturf.IdentityServer/Periturf.IdentityServer.csproj
+++ b/src/Periturf.IdentityServer/Periturf.IdentityServer.csproj
@@ -5,4 +5,10 @@
     
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Periturf" Version="0.6.0-develop0013" />
+    <PackageReference Include="Periturf.Hosting" Version="0.6.0-develop0013" />
+    <PackageReference Include="Periturf.Web" Version="0.6.0-develop0021" />
+  </ItemGroup>
+
 </Project>
